# zeus

./: .dockerignore  .gitignore  Dockerfile  PHASE2_SUMMARY.md  PLAN.md  RAF  README.md  demo_phase2.py  docker-compose.yml  menu.yaml  package-lock.json  package.json  pom.xml  pyproject.toml  server.js  test-settings.sh
app/: config.py
app/db/: README.md  __init__.py  database.py  repositories.py  schema.py
app/models/: command.py  stack.py  stack_version.py
app/utils/: yaml_loader.py
backend/: README.md  docker-compose.yml
backend/openapi/: core-control-api.yaml  curl-examples.sh
frontend/: .keegit
openapi/: postman-collection.json  quick-start.md
public/: index.html
src/main/resources/: application.properties  application.yml
src/main/resources/db/migration/: V1__init.sql
src/main/resources/static/: confirmation.html  index.html  script.js  style.css
src/main/resources/static/css/: dark-theme.css  stack-config.css  stack-modern.css  stack-wizard.css  style.css
src/main/resources/static/js/: stack-config.js  stack-wizard.js
src/main/resources/templates/: index.html  settings.html  stack-config.html  stack-confirmation.html
src/main/resources/templates/fragments/: footer.html  header.html
src/test/resources/: application-docker.yml  application-test.yml  application.yml
storage/: .gitkeep
tests/: test_command_log_repository.py  test_command_repository.py  test_database_schema.py  test_queue_integration.py  test_stack_repository.py  test_stack_version_load_ko.py  test_stack_version_load_ok.py  test_stack_version_repository.py
(+120 files in other folders)
